--- a/Prefs/Resources/fr.lprog/Notifications.strings
+++ b/Prefs/Resources/fr.lprog/Notifications.strings
@@ -16,7 +16,7 @@
   "HIDE_TIME" = "Masquer l'heure de la notification";
   "HIDE_APP_NAME" = "Masquer le nom de l'application";
 
-  "DEFAULT" = "Défaut";
+  "DEFAULT" = "Par Défaut";
   "DYNAMIC" = "Dynamique";
   "CUSTOM" = "Personnalisé";
   "CUSTOM_COLOR" = "Couleur personnalisée";
@@ -28,5 +28,5 @@
   "DARK" = "Sombre";
   "LIGHT" = "Clair";
   "BACKGROUND_BLUR_OPACITY" = "Opacité du flou d'arrière-plan";
-  "BACKGROUND_BLUR_COLOR_OPACITY" = "Transparence de la couleur du flou d'arrière-plan";
+  "BACKGROUND_BLUR_COLOR_OPACITY" = "Transparence du flou d'arrière-plan";
 }
