--- a/Prefs/Resources/fr.lprog/Widgets.strings
+++ b/Prefs/Resources/fr.lprog/Widgets.strings
@@ -14,7 +14,7 @@
   "HIDE_APP_NAME" = "Masquer le nom de l'application";
   "HIDE_HEADER_BACKGROUND" = "Masquer le fond de l'en-tête";
 
-  "DEFAULT" = "Défaut";
+  "DEFAULT" = "Par Défaut";
   "DYNAMIC" = "Dynamique";
   "CUSTOM" = "Personnalisé";
   "CUSTOM_COLOR" = "Couleur personnalisée";
@@ -26,5 +26,5 @@
   "DARK" = "Sombre";
   "LIGHT" = "Clair";
   "BACKGROUND_BLUR_OPACITY" = "Opacité du flou d'arrière-plan";
-  "BACKGROUND_BLUR_COLOR_OPACITY" = "Transparence de la couleur du flou d'arrière-plan";
+  "BACKGROUND_BLUR_COLOR_OPACITY" = "Transparence du flou d'arrière-plan";
 }
